Tue Jul 05 17:00:05 2005  Loic Dachary  <loic@gnu.org>

	* Release 1.0.4
	
	* pokerclient2d/lobby.c (handle_lobby): show icon marking
	  tables where player is seated.

Tue Jul 05 12:58:05 2005  Loic Dachary  <loic@gnu.org>

	* poker-network.pc.in: pkg-config compatibility

Mon Jul 04 10:15:57 2005  Loic Dachary  <loic@gnu.org>

	* README (Client): fix install paths as pointed out by
	  Jeff Schoby <ssrjazz@gmail.com>

Tue Jun 28 19:39:17 2005  proppy  <euphro_j@epitech.net>

	* pokerui/pokerrenderer.py (PokerRenderer.clickSitOut): 
	called when click occured on the sitout interactor
	send toggleSitOut to PokerInterface layer
	
	* pokerui/pokerinterface.py (PokerInterface.sitActionsToggleSitOut): 
	send toggle_sit_out command to poker-interface process

	* pokerclient2d/sit_actions.c (handle_sit_actions): 
	handling toggle_sit_out added : toggle sit_out_next_hand active state	
	smartified g_sit_actions_disable flag usage

Tue Jun 28 18:30:03 2005  Loic Dachary  <loic@gnu.org>

	* configure.ac: substitutions for local configuration

	* {conf,pokerclient2d}/*.xml: moved to .xml.in with values from configure

	* debian/rules: set the configuration variables to debconf variables

Tue Jun 28 18:30:03 2005  Loic Dachary  <loic@gnu.org>

	* pokerclient2d/outfits.c (on_arrow_clicked): outfit arrow wrap around

Tue Jun 28 15:35:14 2005  proppy  <euphro_j@epitech.net>

	* pokerui/pokerrenderer.py (PokerRenderer.chatFormatMessage): 
	chat words (defined in /sequence/chatwords) are filtered from POKER_CHAT message
	POKER_CHAT_WORD packet are scheduled for further response to matched chatwords
	
	* pokerui/pokeranimation.py (PokerAnimationScheduler.__init__): 
	pokeranimation registers chat handler on PACKET_POKER_CHAT_WORD event
	
	* pokernetwork/pokerpackets.py (PacketPokerChatWord.type): 
	PACKET_POKER_CHAT_WORD added

Tue Jun 28 15:24:59 2005  Loic Dachary  <loic@gnu.org>

	* pokernetwork/pokerpackets.py: poker packet renderer
