@@ -3,7 +3,7 @@
 <settings xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	  xsi:noNamespaceSchemaLocation="poker-client.xsd"
 	  verbose="0" delays="true" >
-  <delays position="0" begin_round="0" end_round="0" end_round_last="0" showdown="5" lag="15" />
+  <delays sit="0" position="0" begin_round="0" end_round="0" end_round_last="0" showdown="5" lag="15" />
   <name>username</name>
   <passwd>password</passwd>
   <servers>@POKER_SERVER_HOST@:19380</servers>
