@@ -2,8 +2,8 @@
 <settings xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="settings.xsd" display2d="yes" display3d="no" verbose="5" delays="true" tcptimeout="2000">
   <delays blind_ante_position="0.5" position="2" begin_round="1" end_round="1" end_round_last="1" showdown="1" lag="15"/>
   <screen fullscreen="no" width="1024" height="768"/>
-  <name>dachary5</name>
-  <passwd>dachary1</passwd>
+  <name>foobar</name>
+  <passwd>foobar</passwd>
   <remember>yes</remember>
   <muck>yes</muck>
   <auto_post>no</auto_post>
