@@ -2,7 +2,7 @@
 <settings xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="settings.xsd" verbose="0"
           display2d="yes" display3d="no"
           delays="true" tcptimeout="2000">
-  <delays blind_ante_position="0.5" position="2" begin_round="1" end_round="1" end_round_last="1" showdown="5" lag="15"/>
+  <delays sit="1" blind_ante_position="0.5" position="2" begin_round="1" end_round="1" end_round_last="1" showdown="5" lag="15"/>
   <screen fullscreen="no" width="1024" height="768"/>
   <name>YOURNAME</name>
   <passwd></passwd>
